--- a/index.html
+++ b/index.html
@@ -9,5 +9,91 @@
     <!-- JS -->
     <script src="js/scripts.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="box-shadow-generator">
+      <div id="controls-container">
+        <h2>Configurações de box-shadow:</h2>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="horizontal">Deslocamento horizotal:</label>
+            <input
+              type="range"
+              name="horizontal"
+              id="horizontal"
+              min="-100"
+              max="100"
+              value="5"
+            />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="horizontal-value" name="horizontal-value" />
+            <p>px</p>
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="vertical">Deslocamento vertical:</label>
+            <input
+              type="range"
+              name="vertical"
+              id="vertical"
+              min="-100"
+              max="100"
+              value="5"
+            />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="vertical-value" name="vertical-value" />
+            <p>px</p>
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="blur">Intensidade do borrão (blur):</label>
+            <input
+              type="range"
+              name="blur"
+              id="blur"
+              min="0"
+              max="100"
+              value="10"
+            />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="blur-value" name="blur-value" />
+            <p>px</p>
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="spread">Intensidade do espalhamento (Spread):</label>
+            <input
+              type="range"
+              name="spread"
+              id="spread"
+              min="-100"
+              max="100"
+              value="5"
+            />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="spread-value" name="spread-value" />
+            <p>px</p>
+          </div>
+        </div>
+      </div>
+      <div id="preview">
+        <h2>Preview do efeito gerado</h2>
+        <div id="box"></div>
+      </div>
+    </div>
+    <div id="generated-rule">
+      <h2>Copie e cole seu arquivo de CSS:</h2>
+      <div id="rules-area">
+        <div id="rule">box-shadow <span></span></div>
+        <div id="webkit-rule">-webkit-box-shadow <span></span></div>
+        <div id="moz-rule">-moz-box-shadow <span></span></div>
+      </div>
+    </div>
+  </body>
 </html>
