--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gerador de box-shadow</title>
-    <!-- CSS -->
+    <title>Gerador de Box Shadow</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- JS -->
     <script src="js/scripts.js" defer></script>
   </head>
   <body>
     <div id="box-shadow-generator">
       <div id="controls-container">
-        <h2>Configurações de box-shadow:</h2>
+        <h2>Configurações da Box Shadow:</h2>
         <div class="form-control">
           <div class="range-input">
-            <label for="horizontal">Deslocamento horizotal:</label>
+            <label for="horizontal">Deslocamento horizontal:</label>
             <input
               type="range"
-              name="horizontal"
               id="horizontal"
+              name="horizontal"
               min="-100"
               max="100"
               value="5"
@@ -35,8 +34,8 @@
             <label for="vertical">Deslocamento vertical:</label>
             <input
               type="range"
-              name="vertical"
               id="vertical"
+              name="vertical"
               min="-100"
               max="100"
               value="5"
@@ -49,11 +48,11 @@
         </div>
         <div class="form-control">
           <div class="range-input">
-            <label for="blur">Intensidade do borrão (blur):</label>
+            <label for="blur">Intensidade do borrão (Blur):</label>
             <input
               type="range"
-              name="blur"
               id="blur"
+              name="blur"
               min="0"
               max="100"
               value="10"
@@ -69,11 +68,11 @@
             <label for="spread">Intensidade do espalhamento (Spread):</label>
             <input
               type="range"
-              name="spread"
               id="spread"
+              name="spread"
               min="-100"
               max="100"
-              value="5"
+              value="3"
             />
           </div>
           <div class="reference-input">
@@ -81,19 +80,52 @@
             <p>px</p>
           </div>
         </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="color">Cor da sombra:</label>
+            <input type="color" id="color" name="color" value="#000000" />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="color-value" name="color-value" />
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="opacity">Opacidade:</label>
+            <input
+              type="range"
+              id="opacity"
+              name="opacity"
+              min="0"
+              max="1"
+              value="1"
+              step="0.01"
+            />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="opacity-value" name="opacity-value" />
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="opacity">Sombra interna? (Inset)</label>
+            <input type="checkbox" id="inset" name="inset" />
+          </div>
+        </div>
       </div>
       <div id="preview">
-        <h2>Preview do efeito gerado</h2>
+        <h2>Preview do efeito gerado:</h2>
         <div id="box"></div>
       </div>
     </div>
     <div id="generated-rule">
-      <h2>Copie e cole seu arquivo de CSS:</h2>
+      <h2>Copie e cole no seu arquivo de CSS:</h2>
       <div id="rules-area">
-        <div id="rule">box-shadow <span></span></div>
-        <div id="webkit-rule">-webkit-box-shadow <span></span></div>
-        <div id="moz-rule">-moz-box-shadow <span></span></div>
+        <p id="rule">box-shadow: <span></span></p>
+        <p id="webkit-rule">-webkit-box-shadow: <span></span></p>
+        <p id="moz-rule">-moz-box-shadow: <span></span></p>
       </div>
+      <p id="copy-instructions">Clique no quadro acima para copiar as regras</p>
     </div>
   </body>
 </html>
